--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-VITE_API_URL=https://bookhub-api.onrender.com
+# Frontend Environment Variables
+# Copy this file to .env and update the values
+
+# Backend API URL (set this in Vercel dashboard)
+VITE_API_URL=https://bookhub-backend-1-fctt.onrender.com/api
+
+# Development fallback (optional)
+# VITE_API_URL=http://localhost:3000/api
